3rd commit- Alhamdulillah, app progress is going fine. I have prepared a sample database to work with the layout.

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,119 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="757.57574"
+    android:viewportHeight="757.57574">
+    <group android:translateX="128.78787"
+        android:translateY="128.78787">
+        <path
+            android:pathData="M149.04,335.04h8.4v55.48h-8.4V335.04zM155.68,365.41l12.63,-30.38h9.35l-22.32,45.91L155.68,365.41zM160.22,360.57l5.69,-5.69l13.51,35.64h-9.31L160.22,360.57z"
+            android:fillColor="#403D20"/>
+        <path
+            android:pathData="M190.37,390.52h-8.4v-55.48h8.4V390.52z"
+            android:fillColor="#403D20"/>
+        <path
+            android:pathData="M193.31,335.04h27.4v7.98h-27.4V335.04zM202.85,339.62h8.32v50.9h-8.32V339.62z"
+            android:fillColor="#403D20"/>
+        <path
+            android:pathData="M230.13,389.42c-1.96,-1.12 -3.46,-2.73 -4.5,-4.85c-1.04,-2.11 -1.56,-4.66 -1.56,-7.63v-28.28c0,-3 0.52,-5.56 1.56,-7.67c1.04,-2.11 2.54,-3.73 4.5,-4.85c1.96,-1.12 4.31,-1.68 7.06,-1.68c2.77,0 5.14,0.55 7.1,1.66c1.96,1.11 3.45,2.73 4.48,4.87c1.03,2.14 1.55,4.69 1.55,7.67v3.4h-8.47v-3.4c0,-1.22 -0.18,-2.28 -0.53,-3.17c-0.36,-0.89 -0.88,-1.56 -1.58,-2.02c-0.7,-0.46 -1.55,-0.69 -2.54,-0.69c-0.97,0 -1.79,0.23 -2.48,0.69c-0.69,0.46 -1.22,1.13 -1.6,2c-0.38,0.88 -0.57,1.94 -0.57,3.19v28.28c0,1.25 0.19,2.3 0.57,3.17c0.38,0.87 0.92,1.53 1.6,1.98c0.69,0.46 1.51,0.69 2.48,0.69c1.02,0 1.87,-0.24 2.56,-0.71s1.21,-1.14 1.56,-2c0.36,-0.86 0.53,-1.92 0.53,-3.17v-3.4h8.47v3.4c-0.03,2.98 -0.55,5.53 -1.56,7.67c-1.02,2.14 -2.51,3.76 -4.48,4.87c-1.97,1.11 -4.33,1.66 -7.08,1.66S232.09,390.54 230.13,389.42z"
+            android:fillColor="#403D20"/>
+        <path
+            android:pathData="M256.73,335.04h8.4v55.48h-8.4V335.04zM261.42,359.23h17.78v7.9h-17.78V359.23zM274.36,335.04h8.39v55.48h-8.39V335.04z"
+            android:fillColor="#403D20"/>
+        <path
+            android:pathData="M289.92,335.04h8.4v55.48h-8.4V335.04zM293.93,335.04h20.26v8.05h-20.26V335.04zM293.93,358.96h18.35v8.01h-18.35V358.96zM293.93,382.47h20.26v8.05h-20.26V382.47z"
+            android:fillColor="#403D20"/>
+        <path
+            android:pathData="M319.46,335.04h6.91l14.12,39.8l-1.11,1.22v-41.02h7.79v55.45h-6.98l-14,-38.04l1.11,-1.26v39.3h-7.82V335.04z"
+            android:fillColor="#403D20"/>
+        <path
+            android:pathData="M166.97,422.46v12.07c0,2.23 -0.39,4.14 -1.16,5.72c-0.78,1.58 -1.91,2.79 -3.39,3.62c-1.49,0.83 -3.27,1.25 -5.35,1.25c-2.12,0 -3.94,-0.39 -5.45,-1.18s-2.66,-1.93 -3.45,-3.42c-0.79,-1.5 -1.18,-3.29 -1.18,-5.39v-21.55c0,-2.23 0.39,-4.14 1.16,-5.72c0.78,-1.58 1.91,-2.79 3.39,-3.62c1.49,-0.83 3.27,-1.25 5.35,-1.25c2.04,0 3.79,0.4 5.25,1.21c1.46,0.8 2.57,1.98 3.34,3.52c0.77,1.54 1.15,3.39 1.15,5.55v2.04h-5.73v-2.04c0,-1.06 -0.16,-1.97 -0.47,-2.73s-0.77,-1.33 -1.36,-1.72c-0.6,-0.39 -1.32,-0.58 -2.17,-0.58c-0.95,0 -1.76,0.21 -2.44,0.62c-0.68,0.42 -1.2,1.02 -1.55,1.82c-0.35,0.79 -0.53,1.76 -0.53,2.9v21.55c0,1 0.18,1.86 0.55,2.57s0.9,1.25 1.6,1.62c0.7,0.37 1.54,0.55 2.53,0.55c0.95,0 1.76,-0.2 2.43,-0.61s1.19,-1 1.55,-1.79c0.36,-0.79 0.54,-1.74 0.54,-2.85v-7.04h-4.66v-5.11H166.97z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M180.2,403.41h4.94l9.54,41.28h-5.79l-6.22,-32.82l-6.22,32.82h-5.79L180.2,403.41zM176.77,430.61H189v5.08h-12.24V430.61z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M198.37,403.38h5.39v41.31h-5.39V403.38zM200.9,422.12h7.61c0.96,0 1.79,-0.18 2.48,-0.54c0.69,-0.36 1.22,-0.88 1.58,-1.56c0.36,-0.68 0.54,-1.5 0.54,-2.47v-4.2c0,-1.02 -0.18,-1.9 -0.54,-2.63c-0.36,-0.73 -0.89,-1.28 -1.58,-1.66c-0.69,-0.38 -1.52,-0.57 -2.48,-0.57h-7.61v-5.11h7.13c2.2,0 4.08,0.37 5.65,1.09c1.57,0.73 2.77,1.8 3.59,3.21c0.82,1.41 1.23,3.1 1.23,5.07v4.83c0,2.03 -0.41,3.76 -1.23,5.21s-2.02,2.55 -3.59,3.31s-3.45,1.14 -5.65,1.14h-7.13V422.12zM208,425.95l5.08,-1.31l6.59,20.04h-5.9L208,425.95z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M224.63,403.41h5.39v41.28h-5.39V403.41zM228.07,439.58h7.52c0.98,0 1.74,-0.29 2.27,-0.88c0.53,-0.59 0.79,-1.42 0.79,-2.5v-24.3c0,-1.08 -0.27,-1.91 -0.79,-2.5c-0.53,-0.59 -1.29,-0.88 -2.27,-0.88h-7.52v-5.11h7.35c1.84,0 3.4,0.34 4.68,1.01c1.29,0.67 2.27,1.65 2.94,2.94c0.67,1.29 1.01,2.85 1.01,4.68v24.02c0,1.82 -0.34,3.37 -1.02,4.67c-0.68,1.3 -1.67,2.28 -2.95,2.95c-1.29,0.67 -2.85,1.01 -4.68,1.01h-7.32V439.58z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M249.73,403.41h5.39v41.28h-5.39V403.41zM252.54,403.41h14.9v5.11h-14.9V403.41zM252.54,421.64h13.48v5.11h-13.48V421.64zM252.54,439.58h14.9v5.11h-14.9V439.58z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M271.7,403.41h4.71l11.3,31.65l-0.88,0.74v-32.39h5.14v41.25h-4.77L275.96,414l0.88,-0.74v31.4h-5.14V403.41z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M302.99,444.69h-5.39v-41.28h5.39V444.69z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M308.61,403.41h4.71l11.3,31.65l-0.88,0.74v-32.39h5.14v41.25h-4.77L312.87,414l0.88,-0.74v31.4h-5.14V403.41z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M354.54,422.46v12.07c0,2.23 -0.39,4.14 -1.16,5.72c-0.78,1.58 -1.91,2.79 -3.39,3.62c-1.49,0.83 -3.27,1.25 -5.35,1.25c-2.12,0 -3.94,-0.39 -5.45,-1.18c-1.51,-0.79 -2.67,-1.93 -3.45,-3.42s-1.18,-3.29 -1.18,-5.39v-21.55c0,-2.23 0.39,-4.14 1.16,-5.72c0.78,-1.58 1.91,-2.79 3.39,-3.62c1.49,-0.83 3.27,-1.25 5.35,-1.25c2.04,0 3.79,0.4 5.25,1.21c1.46,0.8 2.57,1.98 3.34,3.52c0.77,1.54 1.15,3.39 1.15,5.55v2.04h-5.73v-2.04c0,-1.06 -0.16,-1.97 -0.47,-2.73s-0.77,-1.33 -1.36,-1.72c-0.6,-0.39 -1.32,-0.58 -2.17,-0.58c-0.95,0 -1.76,0.21 -2.44,0.62c-0.68,0.42 -1.2,1.02 -1.55,1.82s-0.53,1.76 -0.53,2.9v21.55c0,1 0.18,1.86 0.55,2.57s0.9,1.25 1.6,1.62s1.54,0.55 2.53,0.55c0.95,0 1.76,-0.2 2.43,-0.61c0.67,-0.41 1.19,-1 1.55,-1.79s0.54,-1.74 0.54,-2.85v-7.04h-4.66v-5.11H354.54z"
+            android:fillColor="#007C40"/>
+        <path
+            android:pathData="M115.93,302.48a132.34,17.99 0,1 0,264.68 0a132.34,17.99 0,1 0,-264.68 0z"
+            android:strokeAlpha="0.67"
+            android:fillColor="#E9E8E8"
+            android:fillAlpha="0.67"/>
+        <path
+            android:pathData="M299.33,301.87H190.86c-1.54,0 -2.79,-1.25 -2.79,-2.79v-91.73c0,-1.54 1.25,-2.79 2.79,-2.79h108.47c1.54,0 2.79,1.25 2.79,2.79v91.73C302.12,300.62 300.87,301.87 299.33,301.87z"
+            android:fillColor="#B44B2E"/>
+        <path
+            android:pathData="M218.52,126.9c-13.61,-62.86 -50.54,-70.63 -81.65,-79.71C158.91,102.28 176.4,110.06 218.52,126.9z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M251.57,126.9c-5.83,-40.82 27.22,-80.35 51.84,-87.48C291.75,64.05 302.12,99.04 251.57,126.9z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M297.58,121.72c37.58,-12.31 75.17,1.3 92.02,50.54C355.9,164.49 317.67,145.7 297.58,121.72z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M284.09,193c36.82,-6.48 65.98,5.83 82.18,41.47C328.69,233.18 308.19,227.99 284.09,193z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M272.31,221.51c36.56,-1.69 51.84,8.42 59.62,48.6C281.38,263.63 282.68,253.27 272.31,221.51z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M250.9,218.27c40.85,47.95 26.57,76.47 26.26,81.65C241.2,264.93 250.22,235.12 250.9,218.27z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M218.52,212.91c-14.26,26.75 -7.13,55.26 -75.17,87.01C161.5,243.55 202.32,215.97 218.52,212.91z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M188.07,205.96c-14.9,27.86 -48.6,30.46 -78.41,28.51C147.24,196.89 157.61,199.01 188.07,205.96z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M209.45,159.95c-39.53,12.31 -56.38,3.24 -86.19,-33.05C164.74,129.5 188.07,128.2 209.45,159.95z"
+            android:fillColor="#7AB542"/>
+        <path
+            android:pathData="M244.5,206.71c-4.15,-43.14 2.04,-68.73 6.1,-80.15c1.88,-5.3 8.51,-16.72 15.52,-28.81c6.25,-10.77 12.7,-21.9 17.05,-30.7l1.84,0.91c-4.37,8.86 -10.85,20.02 -17.11,30.82c-6.96,12.01 -13.54,23.35 -15.36,28.47c-4,11.26 -10.1,36.52 -5.99,79.26L244.5,206.71z"
+            android:fillColor="#20583C"/>
+        <path
+            android:pathData="M242.66,211.9l-2.05,-0.2c0.76,-7.59 -2.99,-55.49 -22.93,-84.2c-0.27,-0.41 -25.91,-39.14 -51.88,-56.1l1.12,-1.72c26.34,17.2 52.2,56.28 52.46,56.67C239.63,155.48 243.43,204.18 242.66,211.9z"
+            android:fillColor="#20583C"/>
+        <path
+            android:pathData="M250.43,206.69l-2.05,-0.17c2.76,-33.72 17.22,-76.42 48.91,-85.79l0.13,-0.04l0.14,0c5.7,-0.15 15.84,5.77 31.15,14.7c12.07,7.03 27.09,15.79 45.57,24.93l-0.91,1.84c-18.55,-9.18 -33.6,-17.95 -45.7,-25c-14.34,-8.36 -24.75,-14.42 -29.93,-14.42c0,0 -0.01,0 -0.01,0C267.14,131.9 253.13,173.67 250.43,206.69z"
+            android:fillColor="#20583C"/>
+        <path
+            android:pathData="M237.46,209.85l-2.01,-0.44c0.05,-0.25 5.03,-25.56 -26.55,-48.59c-1.19,-0.65 -22.57,-12.12 -60.21,-18.65l0.35,-2.03c38.93,6.76 60.7,18.79 60.92,18.91l0.1,0.07c17.09,12.45 23.63,25.52 26.12,34.3C238.88,203.01 237.52,209.58 237.46,209.85z"
+            android:fillColor="#20583C"/>
+        <path
+            android:pathData="M143.8,222.26l-0.9,-1.85c11.33,-5.49 20.51,-7.71 27.88,-9.5c6.64,-1.61 11.89,-2.89 16.75,-5.83c17.73,-10.04 29.42,-9.18 36.11,-6.7c5.49,2.04 9.65,6.01 11.4,10.9l-1.93,0.69c-1.55,-4.32 -5.26,-7.84 -10.18,-9.67c-6.28,-2.33 -17.34,-3.09 -34.35,6.54c-5.1,3.09 -10.75,4.46 -17.3,6.05C163.62,214.77 154.94,216.87 143.8,222.26z"
+            android:fillColor="#20583C"/>
+        <path
+            android:pathData="M169.92,274.03l-1.93,-0.71c7.56,-20.61 28.82,-49.89 50,-61.29c9.23,-6.26 17.91,-0.01 17.99,0.05l-1.22,1.65c-0.31,-0.22 -7.64,-5.46 -15.66,0.02l-0.09,0.06C198.89,224.62 177.38,253.68 169.92,274.03z"
+            android:fillColor="#20583C"/>
+        <path
+            android:pathData="M269.12,277.69c-11.15,-23.15 -17.61,-43.04 -19.22,-59.12c-3.98,-7.51 -9.94,-4.85 -10.19,-4.73l-0.88,-1.86c0.08,-0.04 8.08,-3.7 12.99,5.82l0.09,0.17l0.02,0.2c1.55,15.87 7.96,35.59 19.05,58.62L269.12,277.69z"
+            android:fillColor="#20583C"/>
+        <path
+            android:pathData="M317.64,259.61c-7.09,-12.44 -15.27,-17.31 -25.62,-23.48c-6,-3.58 -12.81,-7.63 -20.36,-13.82l-0.11,-0.09l-0.08,-0.12c-8.06,-11.69 -20.1,-7.37 -20.61,-7.18l-0.72,-1.92c0.14,-0.05 13.95,-5.07 22.94,7.82c7.39,6.04 14.09,10.03 20,13.55c10.19,6.07 19,11.32 26.36,24.23L317.64,259.61z"
+            android:fillColor="#20583C"/>
+        <path
+            android:pathData="M354.56,225.83c-33.46,-30.79 -70.12,-31.8 -70.48,-31.81l-0.19,-0.02c-10.86,-2.23 -18.69,1.28 -23.34,4.61c-5.3,3.79 -8.15,8.57 -8.41,10.61l-2.04,-0.26c0.37,-2.88 3.73,-8.07 9.26,-12.02c4.98,-3.56 13.32,-7.31 24.86,-4.97c2.19,0.07 38.55,1.8 71.74,32.34L354.56,225.83z"
+            android:fillColor="#20583C"/>
+    </group>
 </vector>
